// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Probando el componenre <GifExpertApp Debe mostrar una lista de categorías 1`] = `
<Fragment>
  <h2>
    Gif Expert App
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="figth club"
      key="figth club"
    />
    <GifGrid
      category="Amelie"
      key="Amelie"
    />
  </ol>
</Fragment>
`;

exports[`Probando el componenre <GifExpertApp debe cargar correctamente el componenete 1`] = `
<Fragment>
  <h2>
    Gif Expert App
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
